tests/parser-test-files/bad-files/parse-while-let.4.error
error: Malformed while-let expression
  --> test:4:37
   |
 4 |  (define f (while-let (Some x) = (moo)))
   |                                       ^ expected body
